--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <head>
 
     </head>
-    <body>
-        <h3>Hello</h3>
-        <h1>l'm Ayomipo</h1>
-        <p>A frontend Developer</p>
+    <body style= "background-color: peru;">
+        <h3><b>Hello</b></h3>
+        <h1 style="color: red;">Sevens cbt software</h1>
+        <hr>
+        LOGIN PAGE 
+        <b><aside>Matric No</aside></b> <input></input> <br>
+        <aside>Password</aside> <input></input>
+        <button style="background-color: palegreen;">login!</button>
+        <u><i>we are gonna be victorious</i></u>
+        <p>A frontend Developer <br> k man is a bad guy</p>
+        <hr>
+        <pre>i would love to learn backend prog</pre>
 
     </body>
     </html>
