--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <html>
     <title>My First Website</title>
     <head>
-
+<style>
+    form {
+        background: white;
+        padding: 20px;
+        max-width: 160px;
+        border-radius: 4PX;
+    }
+</style>
     </head>
     <body style= "background-color: peru;">
         <h3><b>Hello</b></h3>
         <h1 style="color: red;">Sevens cbt software</h1>
         <hr>
         LOGIN PAGE 
-        <b><aside>Matric No</aside></b> <input></input> <br>
-        <aside>Password</aside> <input></input>
-        <button style="background-color: palegreen;">login!</button>
-        <u><i>we are gonna be victorious</i></u>
+       
+       
+        <form>
+            <b><aside>Matric No</aside></b> <input></input> <br>
+            <aside>Password</aside> <input></input>
+            <button type="submit" style="background-color: palegreen;">login!</button>
+        </form>
+            <u><i>we are gonna be victorious</i></u>
         <p>A frontend Developer <br> k man is a bad guy</p>
         <hr>
         <pre>i would love to learn backend prog</pre>
