--- a/index.html
+++ b/index.html
@@ -26,16 +26,15 @@
         <button type="submit" style="background-color: palegreen;"><b>Forgot Password</b>!</button>
     </form>
     <a href="https://facebook.com">ask me questions</a>
-    <u><i>we are gonna be victorious</i></u>
-    <p>are you a student? <br> upload your school Id card <input type="file"> <button>send</button>
-        <hr>
-        <pre>i would love to learn backend prog</pre>
-        <form>
-            <label for="matric no">
+    <u><i>we are gonna be victorious</i></u> <br>upload your school Id card <input type="file"><button>send</button>
+    <hr>
+    <pre>i would love to learn backend prog</pre>
+    <form>
+        <label for="matric no">
                 <input type="checkbox" id="matric-no" placeholder="matric no"> <br>
                 <input>
             </label>
-        </form>
+    </form>
 
 </body>
 
