--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body style="background-image: url(images/IMG_20200418_150805_718.jpg);>
+<body style="background-color: gray;">
     <h3><b>Hello</b></h3>
     <h1 style=" color: rgb(175, 33, 33); "> <strong>SEVENS</strong> CBT <em>SOFTWARE</em></h1>
     <hr>
@@ -26,7 +26,8 @@
         <button type="submit " style="background-color: palegreen; "><b>Forgot Password</b>!</button>
     </form>
     <a href="https://facebook.com ">ask me questions</a>
-    <u><i>we are gonna be victorious</i></u> <br>upload your school Id card <input type="file "><button>send</button>
+    <u><i>we are gonna be victorious</i></u> <br>upload your school Id card
+    <br> <input type="file"><button>send</button>
     <hr>
     <pre>i would love to learn backend prog</pre>
     <form>
