--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body style="background-color: gray;">
+<body style="background-color: gray; max-width: 300px; margin: auto;">
     <h3><b>Hello</b></h3>
     <h1 style=" color: rgb(175, 33, 33); "> <strong>SEVENS</strong> CBT <em>SOFTWARE</em></h1>
     <hr>
