sign up link added

--- a/index.html
+++ b/index.html
@@ -28,35 +28,15 @@
             <button type="submit " style="background-color: palegreen; "><b>LOGIN</b>!</button> <br>
             <button type="submit " style="background-color: palegreen; "><b>Forgot Password</b>!</button>
         </form>
+        <button><a href="/sign up page.html"> SIGN UP!</a></button>
+        <br>
         <a href="https://facebook.com ">ask me questions</a>
-        <u><i>we are gonna be victorious</i></u> <br>upload your school Id card
-        <br> <input type="file "><button>send</button> <br>date of submission
-        <input type="date"> <br> whats your background color <br> <input type="color">
+        <u><i>we are gonna be victorious</i></u> <br>
         <pre>i would love to learn backend prog</pre>
     </div>
-    <div>
-        <form>
-            <h2>sign up </h2>
-            <input placeholder="Email address">
-            <br>
-            <input placeholder="Password" type="password">
-            <br>
-            <input placeholder=" Re-enter Password" type="password"> <br>
-            <input type="checkbox">
-            <em> send me updates</em>
-            <br>
-            <button>Sign &nbsp;Up</button>
-        </form>
-    </div>
 
-    <h2>List of things to read about</h2>
-    <ul>
-        <ol>
-            <li>
-                <b>thermodynamics </b></li>
-            <li><b>applied mechanics </b></li>
-        </ol>
-    </ul>
+
+
 </body>
 
 </html>
