--- a/signuppage.html
+++ b/signuppage.html
@@ -16,17 +16,18 @@
 
 <body style="background-color: rgb(51, 15, 15); ">
     <h3 style=" color: rgb(235, 208, 208); "><b>Hello</b></h3>
-    <h1 style=" color: rgb(235, 208, 208); "> <strong>SEVENS</strong> CBT <em>SOFTWARE</em></h1>
+    <h1 style=" color: rgb(235, 208, 208); font-size: 40px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: italic; "> <strong>SEVENS</strong> CBT SOFTWARE</h1>
     <hr>
     <div>
         <form>
-            <h2>SIGN UP </h2>
+            <h2 style="font-size: 40px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">SIGN UP </h2>
             <input placeholder="Email address">
             <br>
             <input placeholder="Password" type="password">
             <br>
             <input placeholder=" Re-enter Password" type="password"> <br>
-            <input type="checkbox"> <em> send me updates</em>
+            <input type="checkbox">
+            <em style="font-weight: bold; font-size: 17px; font-family: cursive;"> send me updates</em>
             <hr>
             <br>upload your school Id card <br> <input type="file">
             <hr>
