--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <button type="submit " style="background-color: palegreen; "><b>LOGIN</b>!</button> <br>
             <button type="submit " style="background-color: palegreen; "><b>Forgot Password</b>!</button>
         </form>
-        <button><a href="/signuppage.html"> SIGN UP!</a></button>
+        <button><a href="signuppage.html"> SIGN UP!</a></button>
         <br>
         <a href="https://facebook.com ">ask me questions</a>
         <u><i>we are gonna be victorious</i></u> <br>
