--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-
+    <h3 class="bar2"><b>Hello There, Welcome</b></h3>
     <h1>SEVENS CBT SOFTWARE</h1>
     <hr>
-    <div>
+    <div align="center">
         <h2>LOGIN PAGE</h2>
         <img src="images/IMG-20201026-WA0011.jpg "> <br>
-        <form>
+        <form align="center ">
             <b><aside>Matric No</aside></b> <input type="text " placeholder="matric-no " style=" border-radius: 20px; border-style: solid; "> <br>
             <b><aside>Password</aside></b>
             <input type="password " placeholder="Password " style=" border-radius: 20px; border-style: solid ">
@@ -27,7 +27,7 @@
         <i>we are gonna be victorious</i> <br>
         <pre>i would love to learn backend prog</pre>
     </div>
-    <p class="rightwing">most times programming dey tire person, but pikin wey no get helper suppose get small brain to run hin race. God go help me shaa i no go fall</p>
+    <p class="rightwing ">most times programming dey tire person, but pikin wey no get helper suppose get small brain to run hin race. God go help me shaa i no go fall</p>
 </body>
 
 </html>
