--- a/signuppage.html
+++ b/signuppage.html
@@ -8,11 +8,13 @@
 
 </head>
 
-<body class="kill">
-    <h3 class="bar2"><b>Hello There, Welcome</b></h3>
-    <h1 class="bar1">SEVENS CBT SOFTWARE</h1>
-    <hr>
+<body>
     <div>
+        <h3 class="bar2"><b>Hello There, Welcome</b></h3>
+        <h1>SEVENS CBT SOFTWARE</h1>
+        <hr>
+    </div>
+    <div align="center">
         <form>
             <h2 class="temmy">SIGN UP </h2>
             <input placeholder="Email address">
@@ -22,23 +24,24 @@
             <input placeholder=" Re-enter Password" type="password"> <br>
             <input type="checkbox">
             <em> send me updates</em>
-            <hr>
-            <br>upload your school Id card <br> <input type="file">
-            <hr>
-            <br>Date of submission
-            <input type="date"> <br> whats your background color <br> <input type="color">
+            <br>
+            <p>upload your school Id card </p><br> <input type="file">
+            <br>
+            <p>Date of submission</p> <input type="date"> <br>
+            <p>whats your background color</p> <input type="color">
 
             <br>
             <button>Sign &nbsp;Up</button>
         </form>
     </div>
-    <h2 class="bar4">List of things to read about</h2>
-    <ul>
-        <ol class="bar3">
-            <li>Thermodynamics</li>
-            <li>Applied Mechanics </li>
-        </ol>
-    </ul>
+    <div align="center">
+        <h2 class="bar4">List of things to read about</h2>
+
+        <li>Thermodynamics</li>
+        <li> Applied Mechanics </li>
+
+
+    </div>
 </body>
 
 </html>
