--- a/signuppage.html
+++ b/signuppage.html
@@ -14,8 +14,10 @@
         <h1>SEVENS CBT SOFTWARE</h1>
         <hr>
     </div>
+
     <div align="center">
-        <form>
+        <form class="signup">
+            <img class="try" src="images/pencil.jpg "> <br>
             <h2 class="temmy">SIGN UP </h2>
             <input placeholder="Email address">
             <br>
