--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="website" keywords="my First Website">
 </head>
 
 <body>
-    <h3 class="bar2"><b>Hello There, Welcome</b></h3>
-    <h1>SEVENS CBT SOFTWARE</h1>
+    <!---this are my headings--->
+    <div>
+        <h3 class="bar2"><b>Hello There, Welcome</b></h3>
+        <h1>SEVENS CBT SOFTWARE</h1>
+    </div>
     <hr>
     <div align="center">
         <h2>LOGIN PAGE</h2>
@@ -27,7 +31,7 @@
         <i>we are gonna be victorious</i> <br>
         <pre>i would love to learn backend prog</pre>
     </div>
-    <p class="rightwing ">most times programming dey tire person, but pikin wey no get helper suppose get small brain to run hin race. God go help me shaa i no go fall</p>
+    <p class="rightwing">most times programming dey tire person, but pikin wey no get helper suppose get small brain to run hin race. God go help me shaa i no go fall</p>
 </body>
 
 </html>
