--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <!---this are my headings--->
     <div>
-        <h3 class="bar2"><b>Hello There, Welcome</b></h3>
-        <h1>SEVENS CBT SOFTWARE</h1>
+        <h3 class="bar2"><b>Hello There, Welcome To</b></h3>
+        <h1>SEVENS </h1>
     </div>
     <hr>
     <div align="center">
