--- a/signuppage.html
+++ b/signuppage.html
@@ -10,8 +10,8 @@
 
 <body>
     <div>
-        <h3 class="bar2"><b>Hello There, Welcome</b></h3>
-        <h1>SEVENS CBT SOFTWARE</h1>
+        <h3 class="bar2"><b>Hello There, Welcome To</b></h3>
+        <h1>SEVENS </h1>
         <hr>
     </div>
 
