user page added

--- a/user page.html
+++ b/user page.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body></body>
+<body>
+    <h1>Calculator interface</h1>
+    <div class="calculator">
+        <p class="trey">0.</p>
+        <button class="hit">7</button>
+        <button class="hit">8</button>
+        <button class="hit">9</button>
+        <button class="hit">x</button>
+
+        <button class="hit">4</button>
+        <button class="hit">5</button>
+        <button class="hit">6</button>
+        <button class="hit">/</button>
+
+        <button class="hit">1</button>
+        <button class="hit">2</button>
+        <button class="hit">3</button>
+        <button class="hit">+</button>
+
+        <button class="hit">.</button>
+        <button class="hit">0</button>
+        <button class="hit">%</button>
+        <button class="hit">_</button>
+        <button class="hit clear ">AC</button>
+        <button class="hit submit ">=</button>
+    </div>
+
+</body>
 
 </html>
