--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button><a href="https://facebook.com ">ask me questions</a></button>
         <i>we are gonna be victorious</i> <br>
         <pre>i would love to learn backend prog</pre>
+        <button><a href="user page.html"> Calculator</a></button>
     </div>
     <p class="rightwing">most times programming dey tire person, but pikin wey no get helper suppose get small brain to run hin race. God go help me shaa i no go fall</p>
 </body>
