--- a/user page.html
+++ b/user page.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img class="true" src="images/unique.jpg "> <br>
     <h1>Calculator interface</h1>
     <div class="calculator">
         <p class="trey">0.</p>
