--- a/clock.html
+++ b/clock.html
@@ -1,175 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>PERSONAL WEBSITE</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/clock.css" />
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="navbar">
-      <div class="logo">
-        <img src="../images/logo.png" alt="company logo" />
-        <h2><a href="Untitled-1.html"> SEVENS INCORPORATION</a></h2>
-      </div>
-      <nav>
-        <ul id="MenuItems">
-          <li>
-            <b><a href="#home">HOME</a></b>
-          </li>
-          <li>
-            <b><a href="#about">ABOUT</a></b>
-          </li>
-          <li>
-            <b><a href="#testimonial">WHAT WE DO</a></b>
-          </li>
-          <li>
-            <b><a href="Untitled-1.html">CONTACT US</a></b>
-          </li>
-        </ul>
-        <button class="signup-btn1"><a href="">SIGN UP</a></button>
-      </nav>
+
+<head>
+  <title>PERSONAL WEBSITE</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/clock.css" />
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="navbar">
+    <div class="logo">
+      <img src="../images/logo.png" alt="company logo" />
+      <h2><a href="Untitled-1.html" target="_blank"> SEVENS INCORPORATION</a></h2>
+    </div>
+    <nav>
+      <ul id="MenuItems">
+        <li>
+          <b><a href="#home">HOME</a></b>
+        </li>
+        <li>
+          <b><a href="#about">ABOUT</a></b>
+        </li>
+        <li>
+          <b><a href="#testimonial">WHAT WE DO</a></b>
+        </li>
+        <li>
+          <b><a href="Untitled-1.html" target="_blank">CONTACT US</a></b>
+        </li>
+      </ul>
+      <button class="signup-btn1"><a href="">SIGN UP</a></button>
+    </nav>
+  </div>
+
+  <div id="about">
+    <button class="about-btn">
+      <a href="#">LET'S WORK TOGETHER</a>
+    </button>
+    <div class="about-head">
+      <h2>WE'RE AN SEO COMPANY FOR STARTUPS AND BUSINESSES</h2>
+
+      <h4>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
+        exercitationem, culpa quis laborum quaerat illo voluptate enim tenetur
+        deleniti rerum, earum nesciunt obcaecati unde nisi dolor quidem
+        cupiditate hic sunt.
+      </h4>
     </div>
 
-    <div id="about">
-      <button class="about-btn">
-        <a href="#">LET'S WORK TOGETHER</a>
-      </button>
-      <div class="about-head">
-        <h2>WE'RE AN SEO COMPANY FOR STARTUPS AND BUSINESSES</h2>
-
-        <h4>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
-          exercitationem, culpa quis laborum quaerat illo voluptate enim tenetur
-          deleniti rerum, earum nesciunt obcaecati unde nisi dolor quidem
-          cupiditate hic sunt.
-        </h4>
-      </div>
-
-      <div class="about-text">
-        <div class="text-1">
-          <h2>Creative SEO Solutions</h2>
-
-          <p>
-            A sentence or two describing this item. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet.
-          </p>
-        </div>
-
-        <div class="text-2">
-          <h2>Maximize Your Resources</h2>
-
-          <p>
-            A sentence or two describing this item. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet.
-          </p>
-        </div>
-
-        <div class="text-3">
-          <h2>Increase Marketing ROI</h2>
-
-          <p>
-            A sentence or two describing this item. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet.
-          </p>
-        </div>
-
-        <div class="text-4">
-          <h2>Performance Tracking</h2>
-
-          <p>
-            A sentence or two describing this item. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod
-            tincidunt ut laoreet.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div id="testimonial">
-      <h1>TESTIMONIALS</h1>
-      <div class="test-1">
-        <img src="../images/computer 1.png" alt="comp-1" />
-
-        <h3>Red Paper Plane</h3>
-        <h4>A small tagline</h4>
+    <div class="about-text">
+      <div class="text-1">
+        <h2>Creative SEO Solutions</h2>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-          labore modi nemo sequi accusamus ex, doloremque aut optio tempora
-          voluptatum?
+          A sentence or two describing this item. Lorem ipsum dolor sit amet,
+          consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet.
         </p>
       </div>
 
-      <div class="test-2">
-        <img src="../images/computer 2.png" alt="comp-2" />
-
-        <h3>Red Paper Plane</h3>
-        <h4>A small tagline</h4>
+      <div class="text-2">
+        <h2>Maximize Your Resources</h2>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-          labore modi nemo sequi accusamus ex, doloremque aut optio tempora
-          voluptatum?
+          A sentence or two describing this item. Lorem ipsum dolor sit amet,
+          consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet.
         </p>
       </div>
 
-      <div class="test-3">
-        <img src="../images/computer 3.png" alt="comp-2" />
-
-        <h3>Red Paper Plane</h3>
-        <h4>A small tagline</h4>
+      <div class="text-3">
+        <h2>Increase Marketing ROI</h2>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-          labore modi nemo sequi accusamus ex, doloremque aut optio tempora
-          voluptatum?
+          A sentence or two describing this item. Lorem ipsum dolor sit amet,
+          consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet.
+        </p>
+      </div>
+
+      <div class="text-4">
+        <h2>Performance Tracking</h2>
+
+        <p>
+          A sentence or two describing this item. Lorem ipsum dolor sit amet,
+          consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          tincidunt ut laoreet.
         </p>
       </div>
     </div>
+  </div>
 
-    <div id="signup">
-      <h1>SIGN UP</h1>
+  <div id="testimonial">
+    <h1>TESTIMONIALS</h1>
+    <div class="test-1">
+      <img src="../images/computer 1.png" alt="comp-1" />
 
-      <p>we will get in touch with you soon</p>
-      <div class="input">
-        <input type="text" placeholder="NAME" />
-        <input type="email" name="EMAIL" id="" placeholder="EMAIL" />
-        <button type="submit" class="signup-btn2">SIGN UP</button>
-      </div>
+      <h3>Red Paper Plane</h3>
+      <h4>A small tagline</h4>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+        labore modi nemo sequi accusamus ex, doloremque aut optio tempora
+        voluptatum?
+      </p>
     </div>
 
-    <footer class="grid"
-    >
-      <div class="g-col-4">
-        <b>About Us</b>
+    <div class="test-2">
+      <img src="../images/computer 2.png" alt="comp-2" />
 
-        <p>Our Mission</p>
+      <h3>Red Paper Plane</h3>
+      <h4>A small tagline</h4>
 
-        <p>We're Hiring!</p>
-      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+        labore modi nemo sequi accusamus ex, doloremque aut optio tempora
+        voluptatum?
+      </p>
+    </div>
 
-      <div class="g-col-4">
-        <b>Resources</b>
+    <div class="test-3">
+      <img src="../images/computer 3.png" alt="comp-2" />
 
-        <p>Tutorials</p>
+      <h3>Red Paper Plane</h3>
+      <h4>A small tagline</h4>
 
-        <p>Brand Assets</p>
-      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+        labore modi nemo sequi accusamus ex, doloremque aut optio tempora
+        voluptatum?
+      </p>
+    </div>
+  </div>
 
-      <div class="g-col-4">
-        <b>Contact Us</b>
+  <div id="signup">
+    <h1>SIGN UP</h1>
 
-        <p>321-555-5555</p>
+    <p>we will get in touch with you soon</p>
+    <div class="input">
+      <input type="text" placeholder="NAME" />
+      <input type="email" name="EMAIL" id="" placeholder="EMAIL" />
+      <button type="submit" class="signup-btn2">SIGN UP</button>
+    </div>
+  </div>
 
-        <p>info@company.com</p>
-      </div>
-    </footer>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+  <footer class="grid">
+    <div class="g-col-4">
+      <b>About Us</b>
 
-  </body>
+      <p>Our Mission</p>
+
+      <p>We're Hiring!</p>
+    </div>
+
+    <div class="g-col-4">
+      <b>Resources</b>
+
+      <p>Tutorials</p>
+
+      <p>Brand Assets</p>
+    </div>
+
+    <div class="g-col-4">
+      <b>Contact Us</b>
+
+      <p>321-555-5555</p>
+
+      <p>info@company.com</p>
+    </div>
+  </footer>
+  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
