--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 
 <head>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <meta name="website" keywords="my First Website">
     <meta charset="UTF-8">
@@ -12,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My First Website</title>
 
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,32 +39,33 @@
             </nav>
         </div>
 
-        <div>
-            <div class="loginpage">
-                <div class="form">
-                    <h2>LOGIN</h2>
-                    <input type="email" name="email" class="input-field" placeholder="Enter Email Here">
-
-                    <input type="password" name="password" class="input-field" placeholder="Enter Password Here">
-
-                    <button class="login-btn"> <a href="#"> Login</a></button>
-                    <p class="link">Dont have an account</p> <br>
-
-                    <a href="#" id="sign-up"> Sign up here</a>
-
-
-                    <button class="sign-btn "><a href="signuppage.html" target="_blank"> SIGN UP!</a></button>
-                </div>
-
+        <div class="login-page">
+            <div class="form">
+                <form class="register-form" id="reg" method="POST">
+                    <h2><i class="fas fa-lock"></i> Register</h2>
+                    <input type="text" placeholder="Full Name *" required />
+                    <input type="text" placeholder="Username *" required />
+                    <input type="email" placeholder="Email *" required />
+                    <input type="password" placeholder="Password *" required />
+                    <button type="submit">create</button>
+                    <p class="message">Already registered? <a href="#log">Sign In</a></p>
+                </form>
+                <form class="login-form" id="log" method="post">
+                    <h2><i class="fas fa-lock"></i> Login</h2>
+                    <input type="text" placeholder="Username" required />
+                    <input type="password" placeholder="Password" required />
+                    <button type="submit" name="send2">login</button>
+                    <p class="message">Not registered? <a href="#">Create an account</a>
+                    </p>
+                </form>
             </div>
-
-
         </div>
 
 
-    </section>
 
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 
 </body>
 
